etl/trans_mapreduce_python.txt
hduser@hduser-VirtualBox:/usr/local$ python
Python 2.7.12 (default, Mar  1 2021, 11:38:31) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> from functools import reduce
>>> L = [1, 2, 3, 4, 5]
>>> reduce(lambda x, y : x + y, L)
15
>>> f = lambda x, y : x + y
>>> f(10, 20)
30
>>> T = [10, 20, 30, 78, 99, 100]
>>> F = map(lambda t : t * 1.8 + 32, T)
>>> F
[50.0, 68.0, 86.0, 172.4, 210.20000000000002, 212.0]
>>> 
>>> 
>>> import random
>>> R = [random.randint(1, 100) for i in range(100)]
>>> R
[46, 2, 47, 35, 29, 87, 41, 21, 56, 62, 33, 13, 82, 53, 4, 70, 9, 47, 52, 17, 91, 96, 98, 45, 59, 5, 14, 48, 88, 63, 32, 64, 17, 4, 60, 53, 19, 40, 2, 25, 48, 46, 30, 5, 62, 87, 51, 47, 11, 92, 91, 41, 65, 73, 29, 10, 19, 91, 39, 9, 33, 61, 66, 79, 77, 23, 38, 72, 77, 66, 62, 28, 12, 65, 92, 42, 17, 79, 97, 82, 28, 11, 70, 62, 51, 64, 7, 51, 9, 85, 17, 84, 13, 61, 43, 76, 38, 11, 72, 28]
>>> 
>>> 
>>> N13 = filter(lambda n : n % 13 == 0, R)
>>> N13
[13, 52, 91, 91, 65, 91, 39, 65, 13]
>>> 
>>> 
>>> 
>>> text = "red red green red yellow green"
>>> words = text.split()
>>> words
['red', 'red', 'green', 'red', 'yellow', 'green']
>>> 
>>> D = {}
>>> for word in words:
...     if(word in D.keys()):
...             D[word] = D[word] + 1
...     else
  File "<stdin>", line 4
    else
       ^
SyntaxError: invalid syntax
>>> for word in words:
...     if(word in D.keys()):
...             D[word] = D[word] + 1
...     else:
...             D[word] = 1
... 
>>> D
{'green': 2, 'yellow': 1, 'red': 3}
>>> 
>>> 
>>> words
['red', 'red', 'green', 'red', 'yellow', 'green']
>>> words2 = [(key, 1) for key in words]
>>> words2
[('red', 1), ('red', 1), ('green', 1), ('red', 1), ('yellow', 1), ('green', 1)]
>>> 
